# server/src/models/login.response.model.ts
@@ -1,0 +1,14 @@
+import { RoleModel } from "./role.model.";
+
+export class LoginResponseModel {
+    email: string;
+    name: string;
+    roles: RoleModel[];
+    token: string;
+
+    public constructor(init?:Partial<LoginResponseModel>) {
+        if (init)
+            Object.assign(this, init);
+    }
+
+}
